--- a/css/top-nav.css
+++ b/css/top-nav.css
@@ -55,9 +55,6 @@
     padding-right: 0;
     padding-left: 0;
   }
-  .navbar-brand {
-    display: none;
-  }
 
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
